--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -22,7 +22,11 @@ table, th, td{
     border-collapse: collapse;
 }
 
+th{
+    padding: 0 100px 0 100px;
+}
+
 td{
-    padding: 5px;
+    padding: 15px 5px 15px 5px;
     text-align: center;
 }
