--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -1,5 +1,6 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Oxygen', sans-serif;
     font-weight: 400;
     letter-spacing: -.022em;
     font-synthesis: none;
