--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -1,5 +1,4 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-family: 'Oxygen', sans-serif;
     font-weight: 400;
     letter-spacing: -.022em;
@@ -12,6 +11,16 @@ body {
     padding: 25px;
 }
 
+h1{
+    font font-weight: 700;
+    font-size: 30pt;
+}
+
+h2{
+    color: #660b14;
+    font-size: 16pt;
+}
+
 h3{
     padding-left: 25px;
 }
@@ -19,13 +28,13 @@ h3{
 p{
     padding-left: 15px;
     max-width: 50%;
+    font-size: 12pt;
+    color: #000;
 }
 
 img {
     max-width: 100%; /* Afbeeldingen responsive maken */
 }
-
-/* Voeg jouw css hieraan toe */
 
 table, th, td{
     border: 1px solid rgb(50, 50, 50);
@@ -39,4 +48,74 @@ th{
 td{
     padding: 15px 15px 15px 15px;
     text-align: center;
+}
+
+/*----------------------------------------------------------*/
+
+.colorbox{
+    min-height: 30px;
+    max-width: 250px;
+    border: 1px solid black;
+    margin: 5px;
+}
+
+.colorboxp{
+    color: black;
+    font-weight: 600;
+}
+
+.box1{
+    background-color: #660b14;
+}
+
+.box2{
+    background-color: #99434c;
+}
+
+.box3{
+    background-color: #dc7656;
+}
+
+.box4{
+    background-color: #f4a086;
+}
+
+/*----------------------------------------------------------*/
+
+button{
+    font-weight: 400;
+    font-size: 12pt;
+    color: #fafafa;
+    text-transform: uppercase;
+    background-color: #dc7656;
+    border: 3px solid #f4a086;
+    padding: 10px 25px;
+    text-align: center;
+    cursor: pointer;
+    margin-left: 60px;
+}
+
+button:hover{
+     background-color: #99434c;
+}
+
+nav{
+    text-transform: uppercase;
+    padding: 10px 25px 0px 25px;
+    text-align: left;
+}
+
+a{
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 12pt;
+    color: #ffffff;
+    background-color: #dc7656;
+    cursor: pointer;
+    padding: 15px 15px 0 15px;
+    border: 2px solid #99434c;
+}
+
+a:hover{
+    background-color: #f4a086;
 }
