--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -124,6 +124,7 @@ a{
     background-color: #dc7656;
     cursor: pointer;
     padding: 15px 15px 0 15px;
+    margin-top: 40px;
     border: 2px solid #99434c;
 }
 
